# zombie_bird

./: README.md
our_version/: CMakeLists.txt  OOP_Project_Report.md  README.md  Trong_Nhan_Report.md  run_game.bat
our_version/Data/Levels/: level1.json  level2.json  level3.json
our_version/report/: An_Nam_Report.md  Final_report.md  Math_And_Physics_Formulas.md  OOP_Project_Report.md  Phase1_Core_Engine_Implementation.md  Phase2_Physics_Collision_Implementation.md  Quang_Minh_Report.md  System_Architecture_Diagram.md  Trung_Nguyen_Report.md  Tuan_Nguyen_Report.md  Zombie_Bird_Final_Report.md
our_version/src/: main.cpp
our_version/src/core/: CollisionSystem.cpp  CollisionSystem.h  PhysicsBody.h  PhysicsWorld.cpp  PhysicsWorld.h  ResourceManager.cpp  ResourceManager.h
our_version/src/entities/: Block.cpp  Block.h  Entity.h  Pig.cpp  Pig.h
our_version/src/entities/birds/: BasicBird.cpp  BasicBird.h  Bird.cpp  Bird.h  DashBird.cpp  DashBird.h  ExplosiveBird.cpp  ExplosiveBird.h  SplitBird.cpp  SplitBird.h
our_version/src/level/: LevelLoader.cpp  LevelLoader.h
our_version/src/states/: GameplayState.cpp  GameplayState.h  IState.h  LevelSelectState.cpp  LevelSelectState.h  LoseState.cpp  LoseState.h  MainMenuState.cpp  MainMenuState.h  StateManager.cpp  StateManager.h  WinState.cpp  WinState.h
our_version/src/ui/: Slingshot.cpp  Slingshot.h  TrajectoryLine.cpp  TrajectoryLine.h
